# caerus

./: .gitignore  IDEAS.txt  README.md  patch-opencv.ps1  pyproject.toml
benchmarks/: __main__.py
caerus/: __main__.py  cli.py  utils.py  video_ops.py
caerus/sql/: up.sql
