[tool.poetry]
name = "caerus"
version = "0.1.0"
description = ""
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.3"
tqdm = "^4.62.2"
colorama = "^0.4.4"
structlog = "^21.1.0"
click = "^8.0.1"
structlog-overtime = "^1.0.1"
orjson = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.8b0"
isort = "^5.9.3"
vulture = "^2.3"
pydantic = "^1.8.2"
youtube_dl = "^2021.6.6"
joblib = "^1.0.1"

[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
